# friendly-web

./: README.md  all.js  app.cabal  out.frefs.js  out.frefs.json  out.js  out.stats
.github/workflows/: deploy-to-gh.yaml
src/: Friendly.hs  Main.hs
