name:                app
version:             0.1.0.0
synopsis:            Friendly on the web.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  hs-source-dirs:      ./src
  other-modules:
    Friendly
  ghcjs-options:
    -dedupe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base, miso
  default-language:    Haskell2010
